# wifski

./: Dockerfile  README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
public/: index.html
src/: index.ts
wifski-container/: Cargo.toml  README.md
wifski-container/src/: main.rs
