[package]
name = "wifski-container"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tempfile = "3.8"
sanitize-filename = "0.5"
uuid = { version = "1.6", features = ["v4"] }
